<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.4</version>
	</parent>

	<groupId>lu.kbra</groupId>
	<artifactId>shared-timetable</artifactId>
	<version>0.1</version>

	<packaging>pom</packaging>
	<name>Shared Timetable</name>

	<modules>
		<module>shared-timetable-common</module>
		<module>shared-timetable-client</module>
		<module>shared-timetable-server</module>
	</modules>

	<properties>
		<shared-timetables.version>${project.version}</shared-timetables.version>
		<spring-ws-ext.version>0.1</spring-ws-ext.version>
		<maven.compiler.target>17</maven.compiler.target>
		<maven.compiler.source>17</maven.compiler.source>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-websocket</artifactId>
				<version>6.2.9</version>
			</dependency>

			<dependency>
				<groupId>lu.pcy113</groupId>
				<artifactId>PCLib</artifactId>
				<version>0.9.6</version>
			</dependency>
			
			<dependency>
				<groupId>lu.rescue_rush</groupId>
				<artifactId>spring-ws-ext</artifactId>
				<version>${spring-ws-ext.version}</version>
			</dependency>
			<dependency>
				<groupId>lu.rescue_rush</groupId>
				<artifactId>spring-ws-ext-client</artifactId>
				<version>${spring-ws-ext.version}</version>
			</dependency>
			<dependency>
				<groupId>lu.rescue_rush</groupId>
				<artifactId>spring-ws-ext-server</artifactId>
				<version>${spring-ws-ext.version}</version>
			</dependency>
			
			<dependency>
				<groupId>lu.rescue_rush</groupId>
				<artifactId>spring-jda</artifactId>
				<version>0.1</version>
			</dependency>
			
			<dependency>
				<groupId>lu.kbra</groupId>
				<artifactId>shared-timetable-common</artifactId>
				<version>${shared-timetables.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

</project>